sandbox-codebase/objects/heymarket__Team_Mapping__c/heymarket__Team_Mapping__c.object-meta.xml
<CustomObject>
    <label>Team Mapping</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>