sandbox-codebase/objects/heymarket__Team_Mapping__c/fields/heymarket__Default_Inbox_Number__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Default_Inbox_Number__c</fullName>
    <label>Default Inbox Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>