sandbox-codebase/objects/heymarket__Team_Mapping__c/fields/heymarket__Heymarket_User_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_User_Id__c</fullName>
    <label>Heymarket User Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>