sandbox-codebase/objects/heymarket__Team_Mapping__c/fields/heymarket__Heymarket_User_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_User_Name__c</fullName>
    <label>Heymarket User Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>