sandbox-codebase/objects/heymarket__Team_Mapping__c/fields/heymarket__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>