sandbox-codebase/objects/heymarket__Team_Mapping__c/fields/heymarket__Team__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Team__c</fullName>
    <label>Team</label>
    <referenceTo>heymarket__Team__c</referenceTo>
    <relationshipLabel>Team Mappings</relationshipLabel>
    <relationshipName>Team_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>